--- a/package.json
+++ b/package.json
@@ -6,9 +6,31 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.4",
+    "chart.js": "^3.5.1",
+    "crypto-js": "^4.1.1",
+    "dateformat": "^4.5.1",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
+    "react-chartjs-2": "^3.0.4",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.1.1",
+    "react-icons": "^4.2.0",
+    "react-loadable": "^5.5.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.5",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -34,5 +56,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "optionalDependencies": {
+    "babel-loader": "8.1.0"
+  },
+  "devDependencies": {
+    "sass-loader": "^12.1.0"
   }
 }
